--- a/recaps-web/src/container/Recommend-Caption/Step3/step3.module.scss
+++ b/recaps-web/src/container/Recommend-Caption/Step3/step3.module.scss
@@ -65,10 +65,14 @@
   width: 100%;
 }
 .item {
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 15px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 .itemList {
   display: flex;
@@ -158,4 +162,10 @@
   color: $primary;
   -webkit-text-: 8px #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.selected {
+  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.15);
+  border-radius: 15px;
+  background-color: #e9d8e8;
 }
