--- a/recaps-web/src/container/Favourite/favourite.module.scss
+++ b/recaps-web/src/container/Favourite/favourite.module.scss
@@ -40,9 +40,9 @@
   font-size: 24px;
   line-height: 150%;
   padding: 15px 20px;
-  margin: 0 30px;
   color: $primary;
   text-decoration: none;
+  margin: 0 30px;
   &:hover {
     cursor: pointer;
   }
@@ -142,52 +142,84 @@
   padding: 60px 38px;
   box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.15);
   border-radius: 26px;
+  max-height: 620px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba($grey, 0.15);
+  }
+
+  &::-webkit-resizer {
+    height: 80%;
+  }
   .itemCaption {
     display: flex;
+    justify-content: space-between;
     .descriptionItem {
+      width: 900px;
       font-family: "Montserrat";
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
       line-height: 20px;
     }
-    .itemDescription {
-      display: flex;
-      justify-content: space-between;
-      .listTagItem {
-        max-width: 100%;
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        .itemTagInList {
-          margin-top: 10px;
-          padding: 4px 20px;
-          font-family: "Montserrat";
-          font-style: normal;
-          font-weight: 600;
-          font-size: 16px;
-          line-height: 150%;
-          color: #a6aab4;
-          border: 1px solid #7f56d9;
-          box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-          border-radius: 8px;
-          margin-right: 15px;
-        }
-      }
-      .itemDay {
-        min-width: 70px;
-        padding: 20px 0;
-        font-family: "Montserrat";
-        font-style: normal;
-        font-weight: 300;
-        font-size: 12px;
-        line-height: 15px;
-        color: #a6aab4;
-      }
-    }
   }
 }
 
+.action {
+  display: flex;
+  flex-direction: column;
+}
+
+.itemWrapper {
+  display: flex;
+  align-items: center;
+}
+
+.itemDescription {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.listTagItem {
+  // margin-left: 50px;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  .itemTagInList {
+    margin-top: 10px;
+    padding: 4px 20px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    color: #a6aab4;
+    border: 1px solid #7f56d9;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    margin-right: 15px;
+  }
+}
+.itemDay {
+  // min-width: 70px;
+  padding: 20px 0;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 15px;
+  color: #a6aab4;
+}
 .margin {
   margin-left: 160px;
 }
