--- a/recaps-web/src/container/Recommend-Caption/Step1/step-1.module.scss
+++ b/recaps-web/src/container/Recommend-Caption/Step1/step-1.module.scss
@@ -17,7 +17,7 @@
 }
 
 .emotionCard {
-  height: 100%;
+  height: 500px;
   padding: 125px 84px;
   display: flex;
   flex-direction: row;
@@ -30,7 +30,7 @@
 .img {
   position: relative;
   width: 100%;
-  max-height: 340px;
+  max-height: 100%;
   object-fit: cover;
   border-radius: 28px;
 }
