--- a/recaps-web/src/container/Recommend-Caption/Step3/step3.module.scss
+++ b/recaps-web/src/container/Recommend-Caption/Step3/step3.module.scss
@@ -17,7 +17,7 @@
 }
 
 .emotionCard {
-  max-height: 340px;
+  max-height: 500px;
   padding: 15px 30px;
   background-color: #fceded;
   border-radius: 28px;
@@ -25,7 +25,7 @@
 
 .img {
   width: 100%;
-  max-height: 340px;
+  // max-height: 340px;
   object-fit: cover;
   border-radius: 28px;
 }
@@ -65,8 +65,8 @@
   width: 100%;
 }
 .item {
-  padding: 10px;
   display: flex;
+  padding: 10px;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 15px;
